--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     </div>
       <div id="covid_hot_spots" class="chart-holder">
           <p>Average Total Infection Fatality Rate(IFR) across the globe as of August 2, 2020 <br><br>
-            In this choropleth maps, the IFR is shown based on the thinkness of color per region from yellowish to red.
+            In this choropleth maps, the IFR is shown based on the thinkness of color per region from yellowish to red. You can mouseover to find more information on interested region. 
           </p>
           
         <svg id="my_dataviz1" height="1000" width="1200"></svg>
