--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 <body>
 <div class="wrapper">
   <h1 align=center> COVID-19 Narrative Visualization</h1>
-  <p class="g-body">The coronavirus pandemic has sickened more than <span style="color: green; ">17,586,600</span> people, according
+  <p class="g-body" >The coronavirus pandemic has sickened more than <span style="color: green; ">17,586,600</span> people, according
      to official counts. As of August 2nd, 2020 morning, at least <span style="color: red">680,200</span> people have died,
-    and the virus has been detected in nearly every country, as these map shows.</p>
+    and the virus has been detected in nearly every country, as these map shows. I attempted to create a narrative visualization that will allow user to explore the details of coronavirus pandemic spread and impact with daily new coronavirus cases, cumulative/total cases, and deaths by country.</p>
   <div class="layer-toggles">
     <button class="toggle-button" data-key="covid_hot_spots" onclick="toggleElement(event)">
       Hot spots
